--- a/samples/subsys/shell/shell_module/prj.conf
+++ b/samples/subsys/shell/shell_module/prj.conf
@@ -9,8 +9,14 @@ CONFIG_BOOT_BANNER=n
 CONFIG_THREAD_NAME=y
 CONFIG_DEVICE_SHELL=y
 CONFIG_POSIX_CLOCK=y
-CONFIG_DATE_SHELL=y
 CONFIG_THREAD_RUNTIME_STATS=y
 CONFIG_THREAD_RUNTIME_STATS_USE_TIMING_FUNCTIONS=y
 CONFIG_STATS=y
-CONFIG_STATS_SHELL=y
+
+CONFIG_NO_OPTIMIZATIONS=y
+CONFIG_ADC=y
+CONFIG_SHELL_CMDS=n
+CONFIG_SHELL_DYNAMIC_CMDS=n
+CONFIG_NRFX_SAADC=y
+CONFIG_ADC_NRFX_SAADC=n
+CONFIG_ADC_NRFY_SAADC=y
